# CHIP-8-Emulator

./: CMakeLists.txt  README.md
src/: CPU.cpp  main.cpp
vcpkg/: CMakeCache.txt
